Add DELETE and tests, and methods for PUT
